# metatrader5-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  QUICKSTART_WINDOWS.md  RELEASE_CHECKLIST.md  SAFETY.md  SECURITY_MODEL.md  TOOLS.md  TROUBLESHOOTING.md
examples/: claude_code_config.example.json  claude_desktop_config.example.json  example_client.py
scripts/: mt5_readiness_check.py
src/mt5_mcp/: __init__.py  action_router.py  analysis_tools.py  approval_gate.py  audit_tools.py  code_gen.py  log_reader.py  metaeditor_adapter.py  mql5_files.py  mt5_bridge.py  order_tools.py  paths.py  permissions.py  policy.py  report_reader.py  risk_guard.py  server.py  tester_adapter.py  utils.py  workspace_tools.py
tests/: conftest.py  test_action_router.py  test_adapters.py  test_analysis_tools.py  test_approval_gate.py  test_examples_and_scripts.py  test_log_reader.py  test_mql5_files.py  test_mt5_bridge.py  test_order_tools.py  test_permissions.py  test_policy.py  test_report_reader.py  test_risk_guard.py  test_safety_invariants.py  test_server.py
